test/langtools/tools/javac/patterns/PatternVariablesAreFinal.out
PatternVariablesAreFinal.java:10:13: compiler.err.pattern.binding.may.not.be.assigned: s
1 error
